Creacion de vistas, controladores..

--- a/test/dpd.html
+++ b/test/dpd.html
@@ -27,6 +27,12 @@
                     console.log(response);
                 });
             }
+            
+            function post(){
+                dpd.users.post({
+                    username: ''
+                });
+            }
         </script>
     </head>
     <body>
